feat(firebase): estructura basica y get  funcionando

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
+		"noImplicitAny": false,
 		"outDir": "lib",
 		"sourceMap": true,
 		"strict": true,
