--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "liteflix-functions",
 	"scripts": {
+		"deploy": "firebase deploy --only functions",
 		"lint": "eslint --ext .js,.ts . --fix",
 		"build": "tsc",
 		"build:watch": "tsc --watch",
 		"serve": "npm run build && firebase emulators:start --only functions",
 		"shell": "npm run build && firebase functions:shell",
 		"start": "npm run shell",
-		"deploy": "firebase deploy --only functions",
 		"logs": "firebase functions:log"
 	},
 	"engines": {
@@ -15,6 +15,7 @@
 	},
 	"main": "lib/index.js",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"firebase-admin": "^11.8.0",
 		"firebase-functions": "^4.3.1"
