--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"firebase-admin": "^11.8.0",
-		"firebase-functions": "^4.3.1"
+		"firebase-functions": "^4.3.1",
+		"yup": "^1.2.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
